// database.proto
// Fully specifies the database spec.
//
// To generate this protobuf file, run
//   protoc -I api/ \
//     --go_out=api/ \
//     --go_opt=paths=import \
//     --go_opt=module=github.com/minkezhang/truffle/api \
//     api/*proto
syntax = "proto3";

package truffle.config;
option go_package = "github.com/minkezhang/truffle/api/go/config";

import "api/database.proto";

message Config {
	MALConfig mal_config = 1;
}

message MALConfig {
	string client_id = 1;
	int32 popularity_cutoff = 2;
	int32 search_max_results = 3;
	bool nsfw = 4;
}
